# launcher

./: .editorconfig  .gitignore  .prettierrc  README.md  main.py  pyproject.toml  run.bat
.nvim-personal/: setup.lua
