[project]
name = "launcher"
version = "0.1.0"
requires-python = ">=3.11.3"
dependencies = [
    "iterfzf>=1.9.0.67.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "typer>=0.24.1",
]

[tool.ruff]
line-length = 90
indent-width = 2

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",
  "B011",
  "B023",
  "BLE001",
  "C401",
  "C901",
  "COM",
  "D",
  "DTZ005",
  "E501",
  "E731",
  "E741",
  "ERA001",
  "FA102",
  "FBT001",
  "FBT002",
  "FBT003",
  "FIX002",
  "G001",
  "G004",
  "INP001",
  "LOG002",
  "N802",
  "N806",
  "N815",
  "PERF401",
  "PGH003",
  "PGH004",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR1714",
  "PLR1722",
  "PLR2004",
  "PLR5501",
  "PLW0603",
  "PT015",
  "PTH",
  "PTH123",
  "RET504",
  "RET505",
  "RET507",
  "RUF001",
  "RUF003",
  "RUF012",
  "S",
  "SIM102",
  "SIM103",
  "SIM108",
  "SIM114",
  "SIM223",
  "SLF001",
  "T100",
  "T201",
  "T203",
  "TD002",
  "TD003",
  "TD005",
  "TRY300",
  "UP032",
  "UP035",
]
